--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     build:
       context: ./security-service
     ports:
-      - "8080:8080"
+      - "${SERVICE_PORT:-8080}:8080"
     environment:
       - SECURITY_DB_URL=jdbc:postgresql://security-db:5432/security_db
       - DB_USERNAME=${POSTGRES_USER}
