chore: updated configuration and README

--- a/.env
+++ b/.env
@@ -3,9 +3,25 @@ POSTGRES_PASSWORD=
 
 YOUTUBE_API_KEY=
 YOUTUBE_SAVE_PATH=
+YOUTUBE_MAX_PLAYLIST_SEARCH=50
+
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_SAVE_PATH=
 SPOTIFY_TEMP_SAVE_PATH=
+SPOTIFY_CREDENTIALS_TIMEOUT=20
+
+SONG_MAX_DOWNLOAD_THREADS=10
+SONG_MAX_DOWNLOAD_TIME_SECONDS=600
+SONG_DEFAULT_PLATFORM=YOUTUBE
+
+LOL_SERVICE_MAX_BANS=5
+LOL_SERVICE_CHAMP_POOL_SIZE=15
+LOL_SERVICE_ELO_GAIN=20
+LOL_SERVICE_ELO_DIFFICULTY_FACTOR=20
+LOL_SERVICE_ELO_DIFFICULTY_K_FACTOR=200
+LOL_SERVICE_ELO_PERFORMANCE_FACTOR=20
+LOL_SERVICE_MAX_ELO_GAIN=50
+LOL_SERVICE_STARTING_ELO=400
 
 SERVICE_PORT=
